--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title : Wall-E - Jekyll
+title : Cung Anh Tu
 description: 'A Modern Jekyll Theme'
-
+url: 'http://AnhTu.com'
 markdown: kramdown
 highlighter: rouge
 logo: false
